<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
    </group>

    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/orders" />

    <item
        android:id="@+id/nav_transactions"
        android:icon="@drawable/ic_transactions"
        android:title="@string/transactions" />

    <item android:title="@string/label_setup">
        <menu>
            <item
                android:id="@+id/nav_products"
                android:icon="@drawable/ic_products"
                android:title="@string/product_list" />

            <item
                android:id="@+id/nav_taxes"
                android:icon="@drawable/ic_menu_tax"
                android:title="@string/menu_taxes" />

            <item
                android:id="@+id/nav_discounts"
                android:icon="@drawable/ic_discount"
                android:title="@string/menu_discounts" />
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>